--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-	"name": "zadanie4",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "webpack"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"babel-core": "^6.26.0",
-		"babel-loader": "^7.1.2",
-		"babel-preset-es2015": "^6.24.1",
-		"css-loader": "^0.28.7",
-		"html-webpack-plugin": "^2.30.1",
-		"react": "^16.0.0",
-		"react-dom": "^16.0.0",
-		"style-loader": "^0.19.0",
-		"webpack": "^3.8.1"
-	},
-	"dependencies": {
-		"uuid": "^3.1.0"
-	}
+  "name": "test",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1"
+  },
+  "dependencies": {
+    "uuid": "^3.1.0"
+  }
 }
